fix home page horizontal scroll

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -84,23 +84,12 @@
     }
 
     &__holder {
+      background: no-repeat url('/assets/images/index/technologies_photo.webp');
+      background-size: 60%;
+      background-position: left top;
       display: flex;
       width: 100%;
-      height: 100vh;
       margin-top: 4vh;
-    }
-
-    &__photo {
-      width: 50%;
-      height: 100%;
-      right: 50%;
-      position: absolute;
-
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
     }
 
     &__description {
@@ -109,21 +98,25 @@
       font-size: 20px;
       text-align: justify;
     }
-
     &__title { margin: 6vh 0 3vh 0; }
 
     &__items {
-      position: absolute;
-      left: 50%;
-      width: 40%;
-      height: calc(100% - 10vw);
-      padding: 5vw;
+      flex-direction: column;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      margin-left: auto;
+      width: 50%;
       overflow: hidden;
       background: linear-gradient(135deg, #EBDEF5, $main-lilac);
       border-top: 1px solid rgba($dark_black, .2);
       border-bottom: 1px solid rgba($dark_black, .2);
 
-      img { width: 100%; }
+      img {
+        margin-top: 80px;
+        width: 80%;
+      }
 
       .index-technologies__more {
         display: flex;
@@ -134,16 +127,15 @@
         bottom: 0;
         height: 40%;
         width: 100%;
-        margin-left: -5vw;
+        padding-bottom: 10%;
         background: linear-gradient(to top, $main-lilac 34%, transparent 100%);
 
         .button {
-          margin: 0 3vw 5vh;
-          max-width: 500px;
+          margin: 0 20px;
+          width: 100%;
+          max-width: 650px;
         }
       }
-
-      &::-webkit-scrollbar { display: none; }
     }
 
     &__icon {
@@ -306,7 +298,7 @@
 
     &-technologies {
       &__holder {
-        height: 70vh;
+        background-size: cover;
         margin-top: 2vh;
       }
 
@@ -319,12 +311,6 @@
         margin-top: 3vh;
         font-size: .9em;
         line-height: 1.8;
-      }
-
-      &__photo {
-        width: 100%;
-        right: 0;
-        height: 70vh;
       }
 
       &__items {
@@ -355,6 +341,7 @@
 
         .technologies_items-svg {
           height: 100%;
+          width: 100%;
           position: relative;
           margin: 0 auto;
           max-width: 340px;
